[project]
name = "coverbridge-v2"
version = "0.1.0"
description = "CoverBridge V2 Backend"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.30.1",
    "pydantic==2.7.4",
    "sqlalchemy==2.0.30",
    "asyncpg==0.29.0",
    "python-dotenv==1.0.1"
]

[tool.vercel]
entrypoint = "app.orchestration.main:app"
